# Receh

./: .env.example  .gitignore  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/contributors/: route.ts
app/api/horizon-events/: route.ts
app/api/proposals/: route.ts
app/api/roundups/: route.ts
app/stats/: page.tsx
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile
contracts/receh-pool/: Cargo.toml
contracts/receh-pool/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/receh-pool/test_snapshots/test/: create_grant_starts_active_and_increments_counter.1.json  disburse_grant_pays_recipient_from_contract.1.json  disburse_without_majority_fails.1.json  double_disburse_is_rejected.1.json  double_initialize_fails.1.json  double_vote_is_rejected.1.json  initialize_records_admin_vault_and_token.1.json  pause_blocks_writes.1.json  record_roundup_tracks_contributor_and_pool.1.json  record_roundup_zero_fails.1.json  vote_on_missing_proposal_fails.1.json  vote_tally_with_weighted_majority_marks_approved.1.json
contracts/scripts/: deploy.sh  init.sh
drizzle/: 0000_little_roland_deschain.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
messages/: en.json
scripts/: 048-live-test.ts  apply-schema.mjs  init-vault.mjs  screenshots.ts  seed.ts
src/i18n/: config.ts  request.ts  routing.ts
tests/: setup.ts
tests/e2e/: contract-screenshot.spec.ts  lite-demo.spec.ts  prod-real.spec.ts  receh.spec.ts
(+42 files in other folders)
